Climtiaco Late Turn-in

--- a/about.html
+++ b/about.html
@@ -5,13 +5,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- Remember to link to your CSS file! -->
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+    <link 
+    rel="stylesheet" 
+    href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" 
+    integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" 
+    crossorigin="anonymous"/>
 </head>
 <body>
     <!-- ABOUT PAGE -->
     <!-- TODO: Navbar here -->
+    <nav>
+        <ul>
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+            <li>
+                <a href="menu.html">Menu</a>
+            </li>
+            <li>
+                <a href="about.html">About</a>
+            </li>
+            <li>
+                <a href="contact.html">Contact</a>
+            </li>
+        </ul>
+    </nav>
     <!-- TODO: Banner Image here-->
+    <div id="banner">
+        <img id="banner" alt="Banner logo" src="./assets/images/banner.png">
     <main>
         <!-- About page code here -->
+        <h1>About Us</h1>
+        <h2>Locations</h2>
+        <ul>
+            <li>Las Vegas, NV</li>
+            <li>Phoenix, AZ</li>
+            <li>Westchester County, NY</li>
+            <li>San Diego, CA</li>
+        </ul>
+        <h2>Origin Story</h2>
+        <img alt="cups of spices" src="./assets/images/about.jpg">
+        <p>I'm baby snackwave vice stumptown meditation locavore hell of banh mi chartreuse readymade crucifix neutra. Synth fashion axe godard biodiesel yes plz cliche photo booth. Readymade occupy DIY before they sold out. Aesthetic squid post-ironic adaptogen, beard ramps migas umami keffiyeh tbh. Raw denim wolf cray bodega boys locavore. Health goth gluten-free tbh synth, twee live-edge yes plz snackwave heirloom forage.</p>
     </main>
 </body>
 </html>
