--- a/menu.html
+++ b/menu.html
@@ -6,16 +6,23 @@
     <title>Document</title>
     <!-- Remember to link to your CSS file! -->
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
-    <link 
-    rel="stylesheet" 
-    href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" 
-    integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" 
-    crossorigin="anonymous"/>
+    <script src="https://kit.fontawesome.com/8a4231c3c9.js" crossorigin="anonymous"></script>
+    <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+        <script>
+            $(function(){
+                $('a').each(function(){
+                    if ($(this).prop('href') == window.location.href) {
+                $(this).addClass('active'); $(this).parents('li').addClass('active');
+                }
+                });
+            });
+        </script>
 </head>
 <body>
     <!-- MENU PAGE -->
     <!-- TODO: Navbar here -->
-    <nav>
+    <div id="message_bar">We are closed on Thanksgiving & Christmas</div>
+    <nav class="active">
         <ul>
             <li>
                 <a href="index.html">Home</a>
@@ -48,7 +55,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>Chicken Satay</td>
+                    <td><i class="fa-solid fa-star"></i> Chicken Satay</td>
                     <td>$7.95</td>
                 </tr>
                 <tr>
@@ -69,19 +76,19 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>Panang Curry</td>
+                    <td><i class="fa-solid fa-fire"></i>Panang Curry</td>
                     <td>$9.95</td>
                 </tr>
                 <tr>
-                    <td>Red Curry</td>
+                    <td><i class="fa-solid fa-fire"></i>Red Curry</td>
                     <td>$9.85</td>
                 </tr>
                 <tr>
-                    <td>Yellow Curry</td>
+                    <td><i class="fa-solid fa-star"></i> Yellow Curry</td>
                     <td>$8.95</td>
                 </tr>
                 <tr>
-                    <td>Tom Ka Soup</td>
+                    <td><i class="fa-solid fa-fire"></i>Tom Ka Soup</td>
                     <td>$8.95</td>
                 </tr>
                 <tr>
@@ -106,7 +113,7 @@
                     <td>$10.49</td>
                 </tr>
                 <tr>
-                    <td>Rad Nah</td>
+                    <td><i class="fa-solid fa-star"></i> Rad Nah</td>
                     <td>$10.49</td>
                 </tr>
         </table>
@@ -125,7 +132,7 @@
                     <td>$3.99</td>
                 </tr>
                 <tr>
-                    <td>Mango Sticky Rice</td>
+                    <td><i class="fa-solid fa-star"></i> Mango Sticky Rice</td>
                     <td>$5.99</td>
                 </tr>
             </tbody>
@@ -141,7 +148,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>Thai Iced Coffee</td>
+                    <td><i class="fa-solid fa-star"></i> Thai Iced Coffee</td>
                     <td>$3.49</td>
                 </tr>
                 <tr>
